--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="ДЗ-3.css">
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
     <title>Линдинг</title>    
   </head>
