--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./style/index.css">
     <meta charset="utf-8">
     <title>Линдинг</title>    
   </head>
   <body>
         <header class="header">            
             <div class="header_logo">
-               <a href="#ghost"> <img src="logo.png">   </a>
+               <a href="#ghost"> <img src="./images/logo.png">   </a>
             </div>
 
             <div class = "header_text">
@@ -76,7 +76,7 @@
                 Introducing PiedPiperCoin
             </div>
             <div class="ppc2">
-                <img src="PPC Logo.png">
+                <img src="./images/PPC Logo.png">
             </div>
             <div class="text2">
                 <p>   
@@ -103,32 +103,32 @@
             </div>
             <div class="teamFace">
                 <div class="foto">
-                    <div class="i"> <img src="image-2.png">           </div>
+                    <div class="i"> <img src="./images/image-2.png">           </div>
                     <div class="s"> Richard Hendricks                 </div>
                     <div class="a"> Founder & CEO                     </div>
                 </div>
                 <div class="foto">
-                    <div class="i"> <img src="image-6.png">           </div>
+                    <div class="i"> <img src="./images/image-6.png">           </div>
                     <div class="s"> Dinesh Chugtai                    </div>
                     <div class="a"> Senior Programmer                 </div>
                 </div>
                 <div class="foto">
-                    <div class="i"> <img src="image-7.png">           </div>    
+                    <div class="i"> <img src="./images/image-7.png">           </div>    
                     <div class="s"> Bertram Gilfoyle                  </div>    
                     <div class="a"> Chief Systems Architect           </div>
                 </div>
                 <div class="foto">
-                    <div class="i"> <img src="image-3.png">           </div>
+                    <div class="i"> <img src="./images/image-3.png">           </div>
                     <div class="s"> Jared Dunn                        </div>
                     <div class="a"> Chief Operating Officer           </div>
                 </div>     
                 <div class="foto">
-                    <div class="i"> <img src="image-4.png">           </div>
+                    <div class="i"> <img src="./images/image-4.png">           </div>
                     <div class="s"> Monica Hall                       </div>
                     <div class="a"> Chief Financial Officer           </div>
                 </div>
                 <div class="foto">
-                    <div class="i"> <img src="image-5.png">           </div>    
+                    <div class="i"> <img src="./images/image-5.png">           </div>    
                     <div class="s"> Nelson Bighetti                   </div>    
                     <div class="a"> Majority Investor                 </div>    
                 </div>  
